шт. единицы и календарь

--- a/escom-bpm-web/src/main/webapp/view/admin/worktime/calendar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/worktime/calendar.xhtml
@@ -14,14 +14,25 @@
     </ui:define>
 
     <ui:define name="centerFormContent">
-        <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12 without-spaces">
+        <p:panelGrid columns="2" columnClasses="ui-grid-col-6, ui-grid-col-6" styleClass="ui-grid-col-12 without-spaces">
             <h:panelGrid columns="2" styleClass="without-spaces">
-                <p:outputLabel value="#{bundle.Organization}:" for="company" indicateRequired="true"/>
-                <p:selectOneMenu value="#{_bean.company}" id="company" converter="companyConvertor">
-                    <f:selectItems value="#{companyBean.findAll()}" var="org" itemLabel="#{org.name}" itemValue="#{org}" />            
-                    <p:ajax event="change" update="calendar" listener="#{calendarBean.onRefresh()}" oncomplete="return itemChange = 1;"/>
-                </p:selectOneMenu>
+                <h:panelGrid columns="2" styleClass="without-spaces">
+                    <p:outputLabel value="#{bundle.Organization}:" for="company" indicateRequired="true"/>
+                    <p:selectOneMenu value="#{_bean.company}" id="company" converter="companyConvertor">
+                        <f:selectItems value="#{companyBean.findAll()}" var="org" itemLabel="#{org.name}" itemValue="#{org}" />            
+                        <p:ajax event="change" update="calendar staffsGrig" listener="#{calendarBean.onRefresh()}" oncomplete="return itemChange = 1;"/>
+                    </p:selectOneMenu>
+                </h:panelGrid>
+                <h:panelGrid id="staffsGrig" columns="2" styleClass="without-spaces">
+                    <p:outputLabel value="#{bundle.ForSomeone}:" />
+                    <p:selectOneMenu value="#{_bean.selectedStaff}" id="staff" converter="staffConvertor">
+                        <f:selectItems value="#{staffBean.findStaffsByCompany(_bean.company)}" var="staff" itemLabel="#{staff.nameEndElipse}" itemValue="#{staff}" />
+                        <f:selectItem itemValue="#{null}" itemLabel="#{bundle.ForAll}" />
+                        <p:ajax event="change" update="calendar" listener="#{calendarBean.onRefresh()}" oncomplete="return itemChange = 1;"/>
+                    </p:selectOneMenu>
+                </h:panelGrid>
             </h:panelGrid>
+            
             <h:panelGrid columns="4" styleClass="without-spaces">
                 <p:outputLabel id="monthName" value="#{calendarBean.getMounthName()}"/>
                 <p:spacer/>
