--- a/jasper_reports/concorder-list.jrxml
+++ b/jasper_reports/concorder-list.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Карточка объекта" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="91b4b311-f2c8-4859-84d1-54d518bf3415">
-	<property name="ireport.zoom" value="1.3636363636363673"/>
+	<property name="ireport.zoom" value="1.3636363636363675"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="REPORT_TITLE" class="java.lang.String"/>
@@ -16,6 +16,8 @@
 	<field name="fio" class="java.lang.String"/>
 	<field name="date" class="java.lang.String"/>
 	<field name="result" class="java.lang.String"/>
+	<field name="dateBegin" class="java.lang.String"/>
+	<field name="remark" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -24,14 +26,14 @@
 			<textField>
 				<reportElement x="455" y="0" width="100" height="20" uuid="a6052110-7eae-4276-936c-269d83aa62c5"/>
 				<textElement>
-					<font isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{PROCESS_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="1" y="0" width="100" height="20" uuid="ffc118cd-2bc1-4448-9e1a-7b63c0a0427b"/>
 				<textElement>
-					<font isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{PROCESS_DATE}]]></textFieldExpression>
 			</textField>
@@ -45,10 +47,10 @@
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
 					<leftPen lineWidth="0.0"/>
-					<bottomPen lineWidth="1.0"/>
+					<bottomPen lineWidth="0.5"/>
 					<rightPen lineWidth="0.0"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{DOC_NAME}]]></textFieldExpression>
@@ -56,20 +58,20 @@
 			<textField>
 				<reportElement mode="Transparent" x="0" y="63" width="555" height="20" uuid="d335a17e-05a1-4efd-a666-f59055229d35"/>
 				<box>
-					<bottomPen lineWidth="1.0"/>
+					<bottomPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{CURATOR_NAME}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="0" y="43" width="555" height="20" uuid="887fd4e2-4230-4356-aae3-d46ed21de8f9"/>
 				<box>
-					<bottomPen lineWidth="1.0"/>
+					<bottomPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font fontName="SansSerif" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{PARTNER_NAME}]]></textFieldExpression>
 			</textField>
@@ -86,9 +88,9 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="22">
+		<band height="51">
 			<staticText>
-				<reportElement x="0" y="0" width="289" height="22" uuid="1d27e885-df21-4a3f-82ed-c51ef6ba06d1"/>
+				<reportElement x="0" y="0" width="144" height="51" uuid="1d27e885-df21-4a3f-82ed-c51ef6ba06d1"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -97,12 +99,12 @@
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="10" isBold="false"/>
+					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Должность визирующего Ф.И.О.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="289" y="0" width="65" height="22" forecolor="#000000" backcolor="#FFFFFF" uuid="92137f4f-3b4c-4d98-a971-3ebe92b41ce0"/>
+				<reportElement mode="Transparent" x="397" y="0" width="58" height="51" forecolor="#000000" backcolor="#FFFFFF" uuid="92137f4f-3b4c-4d98-a971-3ebe92b41ce0"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -111,12 +113,12 @@
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None" markup="none">
-					<font fontName="SansSerif" size="10"/>
+					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Дата согласования]]></text>
+				<text><![CDATA[Дата согласо-вания]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="354" y="0" width="102" height="22" uuid="ed7b6513-d4cb-4fbf-a3ac-5128939bf2a3"/>
+				<reportElement x="455" y="0" width="100" height="51" uuid="ed7b6513-d4cb-4fbf-a3ac-5128939bf2a3"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -125,30 +127,45 @@
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="10"/>
+					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Виза]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="456" y="0" width="99" height="22" uuid="6140e385-62ed-4093-a083-a4785d838bef"/>
+				<reportElement mode="Transparent" x="144" y="0" width="62" height="51" forecolor="#000000" backcolor="#FFFFFF" uuid="e62aedd1-2408-4690-ae62-fcfea3a77e9f"/>
 				<box>
+					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
 					<bottomPen lineWidth="0.5"/>
 					<rightPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="10"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Подпись]]></text>
+				<text><![CDATA[Дата поступ-ления]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Transparent" x="206" y="0" width="191" height="51" forecolor="#000000" backcolor="#FFFFFF" uuid="74107eae-d9f2-4d30-9077-193b8900419e"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Замечания и предложения]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="0" width="289" height="20" uuid="44cd4089-2fb9-4940-afad-88d82d4e123a"/>
-				<box>
+				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="0" width="144" height="20" uuid="44cd4089-2fb9-4940-afad-88d82d4e123a"/>
+				<box leftPadding="3">
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
 					<bottomPen lineWidth="0.5"/>
@@ -157,8 +174,8 @@
 				<textFieldExpression><![CDATA[$F{fio}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="354" y="0" width="102" height="20" uuid="f33dd4f5-5c6f-471b-aa83-1139a20b260d"/>
-				<box>
+				<reportElement stretchType="RelativeToBandHeight" x="455" y="0" width="100" height="20" uuid="f33dd4f5-5c6f-471b-aa83-1139a20b260d"/>
+				<box leftPadding="3">
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -170,22 +187,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{result}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="456" y="0" width="99" height="20" uuid="e8205a0b-4376-456d-97c9-e808e75c5a3a"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<paragraph lineSpacing="1_1_2"/>
-				</textElement>
-				<text><![CDATA[]]></text>
-			</staticText>
 			<textField pattern="dd.MM.yy" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="289" y="0" width="65" height="20" uuid="301c1945-c8c0-4db1-a3e1-102c164f91ad"/>
+				<reportElement stretchType="RelativeToBandHeight" x="397" y="0" width="58" height="20" uuid="301c1945-c8c0-4db1-a3e1-102c164f91ad"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -198,6 +201,31 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{date}]]></textFieldExpression>
 			</textField>
+			<textField pattern="dd.MM.yy" isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToBandHeight" x="144" y="0" width="62" height="20" uuid="f4024376-ab84-478a-b26d-aafcbcd13f47"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{dateBegin}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement stretchType="RelativeToBandHeight" x="206" y="0" width="191" height="20" uuid="68843127-7432-4088-bd79-03995294fb1a"/>
+				<box leftPadding="3">
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textFieldExpression><![CDATA[$F{remark}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<pageFooter>
@@ -208,7 +236,7 @@
 					<topPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font size="7"/>
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Страница "+$V{PAGE_NUMBER}+" из"]]></textFieldExpression>
 			</textField>
@@ -218,7 +246,7 @@
 					<topPen lineWidth="0.5"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font size="7"/>
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
@@ -228,17 +256,17 @@
 					<topPen lineWidth="0.5"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font size="7"/>
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Распечатано в системе ESCOM.BPM :"]]></textFieldExpression>
 			</textField>
-			<textField pattern="EEE, d MMM yyyy HH:mm:ss Z">
+			<textField pattern="dd/MM/yyyy HH.mm.ss">
 				<reportElement x="134" y="0" width="89" height="20" uuid="fa5042dc-49ef-4ba4-bfb4-cdf381e03a23"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font size="7"/>
+					<font fontName="SansSerif" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
